[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/cfc/src/dreamscape/CombatElements/CombatSignifier.gd" type="Script" id=1]
[ext_resource path="res://addons/cfc/assets/icons/shield.png" type="Texture" id=2]
[ext_resource path="res://addons/cfc/themes/darktheme/fonts/Reggae_One/ReggaeOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/cfc/assets/card_front/tag_container.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="CombatSignifier" type="Control"]
margin_right = 21.0
margin_bottom = 14.0
rect_min_size = Vector2( 24, 30 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_container_texture = ExtResource( 5 )

[node name="Signifier" type="CenterContainer" parent="."]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Signifier"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
uppercase = true

[node name="IconContainer" type="TextureRect" parent="Signifier"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="Signifier"]
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Description" type="PopupPanel" parent="."]
margin_left = 25.0
margin_right = 33.0
margin_bottom = 14.0

[node name="Label" type="RichTextLabel" parent="Description"]
margin_left = 4.0
margin_top = 4.0
margin_right = 304.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="MC" type="MarginContainer" parent="."]
margin_right = 22.0
margin_bottom = 28.0
mouse_filter = 1
custom_constants/margin_top = 24
custom_constants/margin_left = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="MC"]
margin_left = 24.0
margin_top = 24.0
margin_right = 32.0
margin_bottom = 38.0
mouse_filter = 1
text = "0"

[connection signal="mouse_entered" from="." to="." method="_on_CombatSingifier_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CombatSingifier_mouse_exited"]
